# zen-internals

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Makefile  README.md  build-wasm.sh  codecov.yml  idor-playground.html  package.wasm.json  pyproject.toml
.github/: RELEASE.md
.github/workflows/: benchmark.yml  binary-size.yml  build.yml  lint.yml  publish.yml  python-smoketest.yml  smoketests.yml  test.yml  unit-test.yml  wasm-publish.yml  windows.yml
benchmarks/: Cargo.toml  check_thresholds.sh
benchmarks/benches/: idor_analysis.rs  js_injection.rs  sql_injection.rs
playground/: idor.html  index.html  js.html  sqli.html
playground/assets/: style.css
smoketests/: ffi.ts  pyo3.py  wasm.js
src/: lib.rs
src/ffi_bindings/: mod.rs
src/helpers/: diff_in_vec_len.rs  find_all_matches.rs  find_all_matches_test.rs  mod.rs  try_parse_url_path.rs  try_parse_url_path_test.rs
src/idor/: idor_analyze_sql.rs  idor_analyze_sql_test.rs  mod.rs  sql_query_result.rs
src/js_injection/: detect_js_injection.rs  detect_js_injection_test.rs  have_comments_changed.rs  have_statements_changed.rs  is_common_js_input.rs  is_safe_js_input.rs  is_safe_js_input_test.rs  mod.rs
src/js_injection/helpers/: mod.rs  select_sourcetype_based_on_enum.rs
src/path_traversal/: contains_unsafe_path_parts.rs  contains_unsafe_path_parts_test.rs  mod.rs  unsafe_path_start.rs  unsafe_path_start_test.rs
src/pyo3_bindings/: mod.rs
src/route_builder/: build_route_from_url.rs  build_route_from_url_test.rs  looks_like_a_secret.rs  looks_like_a_secret_test.rs  mod.rs  replace_segment_with_param.rs  replace_segment_with_param_test.rs
src/shell_injection/: contains_shell_syntax.rs  contains_shell_syntax_test.rs  detect_shell_injection.rs  detect_shell_injection_test.rs  is_safely_encapsulated.rs  is_safely_encapsulated_test.rs  mod.rs  tokenize_shell.rs  tokenize_shell_test.rs
src/sql_injection/: check_comments_changed.rs  check_comments_changed_test.rs  comment_structure_altered.rs  detect_sql_injection.rs  detect_sql_injection_test.rs  filter_comment_tokens.rs  filter_for_comment_tokens.rs  have_comments_changed.rs  have_comments_changed_test.rs  is_common_sql_string.rs  is_common_sql_string_test.rs  is_dangerous_token.rs  is_dangerous_token_test.rs  is_safe_sql_string.rs  is_safe_sql_string_test.rs  is_whitespace_token.rs  is_whitespace_token_test.rs  mod.rs  select_dialect_based_on_enum.rs  tokenize_query.rs  tokenize_query_test.rs
src/sql_injection/helpers/: mod.rs  select_dialect_based_on_enum.rs  tokens_have_delta.rs
src/waf/: http_scheme.rs  mod.rs  waf_evaluate.rs  waf_evaluate_test.rs  waf_result.rs
src/wasm_bindings/: mod.rs
