[package]
name = "zen_internals"
version = "0.0.0" # Will be replaced with npm version when publishing
edition = "2021"
authors = ["Aikido Security"]
description = "Internal library with utilities to power Zen by Aikido"
license = "AGPL-3.0-or-later"

[lib]
name = "zen_internals"
crate-type = ["cdylib", "rlib"]

[dependencies]
oxc = "0.72.0"
oxc_ast_visit = "0.72.0"
regex = "1.10.6"
sqlparser = { git = "https://github.com/AikidoSec/datafusion-sqlparser-rs.git", rev = "e003b3e2b541909cfe163e966972a8e0145bef75" }
wasm-bindgen = "0.2"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[features]
benchmarking = []

[workspace]
members = [
    "benchmarks",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]
