[package]
name = "zen_internals"
version = "0.0.0" # Will be replaced with npm version when publishing
edition = "2021"
authors = ["Aikido Security"]
description = "Internal library with utilities to power Zen by Aikido"
license = "AGPL-3.0-or-later"

[lib]
name = "zen_internals"
crate-type = ["cdylib", "rlib"]

[dependencies]
oxc = "0.72.0"
oxc_ast_visit = "0.72.0"
regex = { version = "1.12.2", default-features = false, features = ["std", "perf"] }
sqlparser = { git = "https://github.com/AikidoSec/datafusion-sqlparser-rs.git", rev = "e003b3e2b541909cfe163e966972a8e0145bef75" }
wasm-bindgen = { version = "0.2", optional = true }

[profile.release]
strip = true
opt-level = "s"
lto = true
# To speed up compile times, Rust tries to split crates into small chunks and compile as many in parallel as possible.
# The downside is that there's less opportunities for the compiler to optimize code across these chunks.
# So, let’s tell it to do one chunk per crate:
# See https://groups.google.com/a/chromium.org/g/rust-dev/c/ab_Y2FqgM64
codegen-units = 1

[features]
default = []
benchmarking = []
wasm-js = ["wasm-bindgen"]

[workspace]
members = [
    "benchmarks",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]
