[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "zen_internals"
dynamic = ["version"]
requires-python = ">=3.8"
description = "Internal library with utilities to power Zen by Aikido"
license = { text = "AGPL-3.0-or-later" }

[tool.maturin]
features = ["python"]
module-name = "zen_internals"
